# global-oauth2

./: .gitignore  LICENSE  README.md  pyproject.toml
authserver/: admin.py  forms.py  models.py  urls.py  views.py
authserver/management/: __init__.py
authserver/management/commands/: generate_users.py
authserver/migrations/: 0001_initial.py  0002_alter_user_graduation_year.py  0002_remove_user_access_token_remove_user_graduation_year_and_more.py  0002_user_verified.py  0003_user_access_token_user_graduation_year_and_more.py  0003_user_email_code.py  0004_delete_authorizationcode_remove_user_access_token_and_more.py  0004_user_graduating_year.py  0005_permmanager.py  0005_remove_user_graduation_year_remove_user_is_verified.py  0006_rename_email_code_user_uuid.py  0006_rename_user_student.py  0007_customuser_delete_student.py  0007_user_email_code.py
core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html
templates/registration/: login.html  signup.html  verify.html
templates/utility/: change_password.html  forgot_password.html
